clang/test/BSC/Negative/Parser/detect_eof/detect_eof_enum.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

[enum // expected-error {{expected expression}}
// expected-error {{expected identifier or '('}}